[metadata]
name = medical-dino
version = 0.0.1
author = Benedict Clarkson
author_email = benedictclarkson1@gmail.com
description = An implementation of the DINO algorithm for medical chest images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bclarkson-code/self-supervised-learning
project_urls =
    Bug Tracker = https://github.com/bclarkson-code/self-supervised-learning/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src